--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
 		<java.version>17</java.version>
 		<sonar.organization>darryl1975</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.coverage.jacoco.xmlReportPaths>
+    		../app-it/target/site/jacoco-aggregate/jacoco.xml
+		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 	<dependencies>
 		<dependency>
