--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
 
   sonar:
     needs: test
-    name: Build and analyze
+    name: Build and analyze with SonarCloud.io
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
